--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
     
     <script>
         // Google Apps Script Web App URL
-        const WEBAPP_URL = 'YOUR_WEBAPP_URL_HERE';
+        const WEBAPP_URL = 'https://script.google.com/macros/s/AKfycbx2Fy9sZJFRzChfeLy-8v57O1kLMrxERhI9mWEVxGzEDoQj_Px-_GVKy61T0bRlTBdP/exec';
         
         // Calculate methods total
         function calcMethodsTotal() {
